style.css
:root {
  font-family: Roboto, sans-serif;
  font-size: 16px;
}

ul, li {
  margin: 0;
  padding: 0;
  list-style: none;
}

body{
  height: 100vh;
  width: 100vw;
  margin: 0;
}

.container{
  width: 100%;
  height: 100%;
  display: grid;
  grid-template-rows: 1fr 6fr;
  grid-template-columns: 1fr 3.75fr;
}

/* Sidebar */

.sidebar {
  background-color: rgba(255,0,0,0.3);
  padding: 16px;
  grid-row: 1 / 3;
  display: grid;
  grid-template-rows: auto auto 1fr;
  gap: 40px;
  align-items: start;
}

.title {
  display: flex;
  align-items: center;
  gap: 10px;
  font-size: 28px;
  font-weight: bold;
}

.title img {
  width: 50px;
}

.nav li {
  margin-bottom: 1.2rem;
  font-size: 1.3rem;
  display: flex;
  align-items: center;
  gap: 16px;
}

.nav li img {
  width: 22px;
}

/* Header */

.header {
  background-color: rgba(0,255,0,0.3); 
  grid-row: 1;
  grid-column: 2;
}

/* Main Content */

.main-content {
  background-color: rgba(0, 0, 255, 0.3);  
  grid-row: 2;
  grid-column: 2;
}

